Changelog
=========

0.2.3 (unreleased)
------------------

- added map_viewlet_position in custom style form [gborelli]
- plone 4.1 fixes [gborelli]
- added z3c.autoinclude entry point [gborelli]
- Normalising CSV and WKT abbreviations throughout the package [davidjb]


0.2.2 (2010-12-28)
------------------

- removed IGeoView [gborelli]
- Added dutch translations [robgietema]


0.2.1 (2010-11-13)
------------------

- geocoding javascript refactoring
- added translations


0.2 (2010-10-31)
----------------

* Updated geo shape form to exclude the geopoint Javascript which was
  causing the old marker actions to be applied to the map widget.
  [rockdj]
* Manage coordinates form now redirects to the the View action for
  certain types of content specified in the site properties.  This 
  includes types such as File and Image where redirecting to their normal
  absolute URL would prompt the user to download said content.
  [rockdj]
* Added collective.geo.kml to install_requires for per-content KML 
  settings.
  [rockdj]
* Added ability to specify per-content KML style settings together with
  changes in collective.geo.kml. The manage coordinates form now
  presents an interface through which custom style settings can be specified.
  [rockdj]
* Changed geoshapeform.pt to allow for collapsible subforms.
  [rockdj]
* Restructured geoshapeform.pt to have the map widget above the action
  buttons and allowed for subforms to be included at the bottom of the
  form.  
* added Shapely package in install_requiries
* Updated CSV reader and other coordinate references to be consistent
  with WGS 1984 reference system.  This involves standardising the
  coordinate order to be [longitude, latitude] rather than [latitude,
  longitude].
  [rockdj]
* Updated unit tests to check for error message on CSV upload as well 
  as updated coordinates.
  [rockdj]
* use single form instead of two-step form for editing shapes
* register manage-coordinates for CMF PortalContent (not just