@@ -1,3 +1,13 @@
 GLOBALS = globals()
 
 PROJECTNAME = "collective.geo.contentlocations"
+
+GEO_STYLE_FIELDS = ['use_custom_styles',
+                    'map_viewlet_position',
+                    'linecolor',
+                    'linewidth',
+                    'polygoncolor',
+                    'marker_image',
+                    'marker_image_size',
+                    'display_properties'
+                   ]
