@@ -31,6 +31,11 @@ setup(name='collective.geo.contentlocations',
           'collective.geo.mapwidget',
           'collective.geo.geographer',
       ],
+      extras_require = {
+          'test': [
+              'plone.testing',
+          ]
+      },
       entry_points="""
       # -*- Entry points: -*-
       [z3c.autoinclude.plugin]
